--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "Kurmi Chan"
+          find: "Kurumi Chan"
           replace: "Daisy johnson"
       - name: Create Pull Request
         uses: stefanzweifel/git-auto-commit-action@v4
