--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "KURUMIBOT"
-          replace: "DAISY_JOHNSON_BOT"
+          find: "DAISY_JOHNSON_BOT"
+          replace: "KURUMIBOT"
       - name: Create Pull Request
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
